workspace_1.14.1/.metadata/.plugins/org.eclipse.cdt.ui/Q-3 using sw1.build.log
13:19:05 **** Incremental Build of configuration Debug for project Q-3 using sw1 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:169:13: error: invalid storage class for function 'MX_GPIO_Init'
  169 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c: In function 'MX_GPIO_Init':
../Core/Src/main.c:188:25: error: 'B1_Pin' undeclared (first use in this function)
  188 |   GPIO_InitStruct.Pin = B1_Pin;
      |                         ^~~~~~
../Core/Src/main.c:188:25: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:191:17: error: 'B1_GPIO_Port' undeclared (first use in this function); did you mean 'SWO_GPIO_Port'?
  191 |   HAL_GPIO_Init(B1_GPIO_Port, &GPIO_InitStruct);
      |                 ^~~~~~~~~~~~
      |                 SWO_GPIO_Port
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:242:1: error: expected declaration or statement at end of input
  242 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:50:13: warning: 'MX_GPIO_Init' used but never defined
   50 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:233:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  233 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:169:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  169 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:121:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  121 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

13:19:12 Build Failed. 5 errors, 4 warnings. (took 6s.937ms)

